--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,6 +5,7 @@
   <div class="mb-5">  
   <h1>Все посты пользователя {{ author.get_full_name }}</h1>
   <h3>Всего постов: {{ author.posts.count }} </h3>
+  {% if request.user != author and request.user.is_authenticated%}
     {% if following %}
       <a class="btn btn-lg btn-light"
         href="{% url 'posts:profile_unfollow' author.username %}"
@@ -17,6 +18,7 @@
           Подписаться
       </a>
     {% endif %}
+  {% endif %}
     {% for post in page_obj %}
       <article>
         <ul>
